# pvos

cv1-fork/: CMakeLists.txt  main.cpp
msgq/: custom_queue.cpp  main.cpp  v_msgq.cpp
pipe-redirect-pr2/: CMakeLists.txt  main.cpp
pipe-threads-cv2/: CMakeLists.txt  exec_test.cpp  process_file_read.cpp  procesy_max.cpp  threads_file_read.cpp  threads_max.cpp
readline/: main.cpp  producer.cpp
semaphores-pr/: consumer.cpp  crate.cpp  producer.cpp  vcrate.cpp  vproducer.cpp
signals/: child_party.cpp  helicopter.cpp  main.cpp  print.cpp  stopping.cpp
socksrv/: CMakeLists.txt  socket_cl.cpp  socket_srv.cpp  socket_srv_mplex.cpp  socket_srv_thread.cpp
